--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 license = "Apache-2.0"
-
 packages = [{ include = "swisscom_ai" }]
+build = "build.py"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -14,11 +14,12 @@ nltk = "^3.7"
 numpy = "^1.23.1"
 scikit-learn = "^1.1.2"
 requests = "^2.28.1"
-sent2vec = "^0.3.0"
+
+Cython = "^0.29.32"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", "cython"]
 build-backend = "poetry.core.masonry.api"
