--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ Cython = "^0.29.14"
 pytest = "^7.1.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "cython"]
+requires = ["poetry-core>=1.0.0", "cython", "setuptools"]
 build-backend = "poetry.core.masonry.api"
