--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.8"
 langdetect = "1.0.7"
 nltk = "^3.7"
 numpy = "^1.23.1"
-scikit-learn = "^1.1.2"
+scikit-learn = "0.23.1"
 requests = "^2.28.1"
 
 Cython = "^0.29.14"
